[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "yan"
dynamic = ["version"]
description = "A JIT framework for high-performance CUDA kernels."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[tool.setuptools]
packages = ["yan", "yan.jit", "yan.jit_kernels"]
# packages = {find = {}}

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"

[tool.setuptools.package-data]
yan = [
    "include/cute/**/*",
    "include/cutlass/**/*",
    "include/gemm/**/*",
    "include/scan/**/*",
    "include/reduce/**/*",
    "include/softmax/**/*",
    "include/flash_attn/**/*",
    "include/tirplane/**/*",
    "include/comm/**/*",
]